# x2gtfs

./: .gitignore  pyproject.toml
samples/simplexl/: Albtal_H.xlsx  Albtal_R.xlsx  config.yaml
samples/simplexl/meta/: Haltestellen.xlsx  Kalender.xlsx  KalenderAusnahmen.xlsx  LinienUnternehmer.xlsx
src/x2gtfs/: __main__.py  config.py  gtfs.py  iterator.py  models.py  x2gtfs.py
